# simple-kv

./: Cargo.toml  abi.proto  build.rs
examples/: client.rs  dummy_server.rs  gen_cert.rs  server.rs  server_with_codec.rs  server_with_sled.rs
fixtures/: ca.cert  ca.key  client.cert  client.key  server.cert  server.key
src/: client.rs  error.rs  lib.rs  server.rs
src/network/: frame.rs  mod.rs  multiplex.rs  stream.rs  stream_result.rs  tls.rs
src/pb/: abi.rs  mod.rs
src/service/: command_service.rs  mod.rs  topic.rs  topic_service.rs
src/storage/: memory.rs  mod.rs  sleddb.rs
