[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.9"
tracing = "0.1"
thiserror = "1"
dashmap = "5"
http = "0.2"

[dev-dependencies]
anyhow = "1"
async-prost = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.9"