[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.9"
tracing = "0.1"
thiserror = "1"
dashmap = "5"
http = "0.2"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
flate2 = "1" # gzip

[dev-dependencies]
anyhow = "1"
async-prost = "0.3"
futures = "0.3"

tracing-subscriber = "0.3"
tempfile = "3"
tokio-util = { version = "0.7", features = ["codec"] }

[build-dependencies]
prost-build = "0.9"