[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[dependencies]
anyhow = "1"
bytes = "1"
dashmap = "5"
flate2 = "1" # gzip
http = "0.2"
prost = "0.9"
sled = "0.34"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
async-prost = "0.3"
futures = "0.3"
tempfile = "3"
tokio-util = { version = "0.7", features = ["codec"] }

[build-dependencies]
prost-build = "0.9"